--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ISports">
+        android:theme="@style/Theme.ISports"
+        android:name="br.edu.ufabc.isports.App">
         <activity
-            android:name=".MainActivity"
+            android:name="br.edu.ufabc.isports.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
