--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,10 @@ android {
     }
 }
 
-dependencies {
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
+dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -48,6 +50,9 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation 'androidx.slidingpanelayout:slidingpanelayout:1.2.0'
     implementation 'com.beust:klaxon:5.6'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation platform('com.google.firebase:firebase-bom:29.3.1')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
